--- a/bitdistiller.yaml
+++ b/bitdistiller.yaml
@@ -3,7 +3,7 @@ description: GCR Bit Distiller
 target:
   service: sing
   name: msrresrchvc
-  workspace_name: sysintws
+  workspace_name: gcrllama2ws
 
 environment:
   image: amlt-sing/acpt-2.2.2-py3.10-cuda12.1
@@ -14,12 +14,12 @@ code:
   local_dir: /home/v-jiafucheng/Projects/BitDistiller/
 
 data:
-  local_dir: data
+  local_dir: /data/fuchengjia2/Projects/BitDistiller/data
   remote_dir: gcrbitdistillerdata
 
 jobs:
 - name: gcrbitdistillergenerateteacherdata
-  sku: 80G2-A100
+  sku: 80G1-A100
   command:
   - bash tools/generate_teacher_data_amlt.sh
   mpi: False
@@ -28,7 +28,7 @@ jobs:
     env:
       NCCL_DEBUG: info
 - name: gcrbitdistiller
-  sku: 80G8-H100
+  sku: 80G4-A100
   command:
   - bash tools/run_kd_qat_amlt.sh
   mpi: False
