--- a/bitdistiller.yaml
+++ b/bitdistiller.yaml
@@ -2,7 +2,7 @@ description: GCR Bit Distiller
 
 target:
   service: sing
-  name: msroctovc
+  name: msrresrchbasicvc
   workspace_name: srgxws@srgx
 
 environment:
@@ -32,9 +32,22 @@ jobs:
     env:
       _AZUREML_SINGULARITY_JOB_UAI: /subscriptions/e546c811-2312-46e2-9fd0-c949c65da4d9/resourcegroups/srgx/providers/Microsoft.ManagedIdentity/userAssignedIdentities/srgxuai
 - name: gcrbitdistiller
-  sku: 40G8-A100
+  sku: 80G4-A100
   command:
   - bash tools/run_kd_qat_amlt.sh
+  mpi: False
+  process_count_per_node: 0
+  submit_args:
+    env:
+      NCCL_DEBUG: info
+  identity: managed
+  submit_args:
+    env:
+      _AZUREML_SINGULARITY_JOB_UAI: /subscriptions/e546c811-2312-46e2-9fd0-c949c65da4d9/resourcegroups/srgx/providers/Microsoft.ManagedIdentity/userAssignedIdentities/srgxuai
+- name: gcrbitdistillertesttask
+  sku: 80G1-A100
+  command:
+  - bash tools/run_test_task_amlt.sh Llama-2-7b-chat-hf wikitext
   mpi: False
   process_count_per_node: 0
   submit_args:
