--- a/mybit.yaml
+++ b/mybit.yaml
@@ -2,7 +2,7 @@ description: GCR Bit Distiller
 
 target:
   service: sing
-  name: msroctovc
+  name: msrresrchbasicvc
   workspace_name: srgxws@srgx
 
 environment:
@@ -14,12 +14,12 @@ code:
   local_dir: /home/donglinbai/Projects/wzw/BitDistiller-Q4_0/
 
 data:
-  local_dir: /home/donglinbai/Projects/wzw/BitDistiller-Q4_0/data/
-  remote_dir: gcrbitdistillerdata/
+  local_dir: /data/wuzewen/BitDistiller/data
+  remote_dir: gcrbitdistillerdata
 
 jobs:
 - name: gcrbitdistillergenerateteacherdata
-  sku: 80G1-A100
+  sku: 80G2-A100
   command:
   - bash tools/generate_teacher_data_amlt.sh
   mpi: False
@@ -32,9 +32,9 @@ jobs:
     env:
       _AZUREML_SINGULARITY_JOB_UAI: /subscriptions/e546c811-2312-46e2-9fd0-c949c65da4d9/resourcegroups/srgx/providers/Microsoft.ManagedIdentity/userAssignedIdentities/srgxuai
 - name: gcrbitdistiller
-  sku: 40G4-A100
+  sku: 80G4-A100
   command:
-  - bash tools/run_kd_qat_amlt.sh 
+  - bash tools/run_kd_qat_amlt.sh
   mpi: False
   process_count_per_node: 0
   submit_args:
@@ -44,23 +44,10 @@ jobs:
   submit_args:
     env:
       _AZUREML_SINGULARITY_JOB_UAI: /subscriptions/e546c811-2312-46e2-9fd0-c949c65da4d9/resourcegroups/srgx/providers/Microsoft.ManagedIdentity/userAssignedIdentities/srgxuai
-- name: gcrbitdistiller_run_and_test
-  sku: 40G4-A100
+- name: gcrbitdistillertesttask
+  sku: 80G1-A100
   command:
-  - bash tools/run_and_test_amlt.sh
-  mpi: False
-  process_count_per_node: 0
-  submit_args:
-    env:
-      NCCL_DEBUG: info
-  identity: managed
-  submit_args:
-    env:
-      _AZUREML_SINGULARITY_JOB_UAI: /subscriptions/e546c811-2312-46e2-9fd0-c949c65da4d9/resourcegroups/srgx/providers/Microsoft.ManagedIdentity/userAssignedIdentities/srgxuai
-- name: gcrbitdistillertest_task
-  sku: 40G1-A100
-  command:
-  - bash tools/run_test_task_amlt.sh
+  - bash tools/run_test_task_amlt.sh Llama-2-7b-chat-hf wikitext
   mpi: False
   process_count_per_node: 0
   submit_args:
