fix threshold_generation and test

--- a/mi300.yaml
+++ b/mi300.yaml
@@ -30,9 +30,10 @@ jobs:
   - rocm-smi
   - sleep infinity
 - name: gcrbitdistiller
-  sku: 192G8-MI300X-IB-xGMI
+  sku: 192G4-MI300X-IB-xGMI
   command:
   - bash tools/run_kd_qat_amlt.sh $EXTRA_ARGS
+  # - sleep infinity
   mpi: False
   process_count_per_node: 0
   submit_args:
@@ -42,6 +43,7 @@ jobs:
   submit_args:
     env:
       _AZUREML_SINGULARITY_JOB_UAI: /subscriptions/e546c811-2312-46e2-9fd0-c949c65da4d9/resourcegroups/srgx/providers/Microsoft.ManagedIdentity/userAssignedIdentities/srgxuai
+      SKU: 192G4-MI300X-IB-xGMI
 - name: gcrbitdistiller_test_task
   sku: 192G8-MI300X-IB-xGMI
   command:
