--- a/mi300.yaml
+++ b/mi300.yaml
@@ -33,7 +33,7 @@ jobs:
   sku: 192G4-MI300X-IB-xGMI
   command:
   - bash tools/run_kd_qat_amlt.sh $EXTRA_ARGS
-  # - sleep infinity
+  - sleep infinity
   mpi: False
   process_count_per_node: 0
   submit_args:
@@ -44,6 +44,7 @@ jobs:
     env:
       _AZUREML_SINGULARITY_JOB_UAI: /subscriptions/e546c811-2312-46e2-9fd0-c949c65da4d9/resourcegroups/srgx/providers/Microsoft.ManagedIdentity/userAssignedIdentities/srgxuai
       SKU: 192G4-MI300X-IB-xGMI
+
 - name: gcrbitdistiller_test_task
   sku: 192G8-MI300X-IB-xGMI
   command:
