fix test_task and trainer

--- a/bitdistiller.yaml
+++ b/bitdistiller.yaml
@@ -18,8 +18,23 @@ data:
   remote_dir: gcrbitdistillerdata/
 
 jobs:
-- name: gcrbitdistiller
+- name: gcr_bitdistiller
   sku: 80G4-A100
+  command:
+    - bash tools/amlt_wrapper.sh
+    # - sleep infinity
+  mpi: False
+  process_count_per_node: 0
+  identity: managed
+  sla_tier: Premium
+  priority: high  
+  execution_mode: basic
+  submit_args:
+    env:
+      NCCL_DEBUG: info
+      _AZUREML_SINGULARITY_JOB_UAI: /subscriptions/e546c811-2312-46e2-9fd0-c949c65da4d9/resourcegroups/srgx/providers/Microsoft.ManagedIdentity/userAssignedIdentities/srgxuai
+- name: gcr_bd_test_task
+  sku: 80G1-A100
   command:
     - bash tools/amlt_wrapper.sh
     # - sleep infinity
