--- a/tools/params_temp.env
+++ b/tools/params_temp.env
@@ -1,9 +1,9 @@
-job_name=local_test
+job_name=Meta-Llama-3-8B-sparse_0.7-cr_0_q4-distill
 tasks_array=train
-model_name=Qwen2.5-0.5B-Instruct
-sparse=0.5
+model_name=Meta-Llama-3-8B
+sparse=0.7
 do_cr=0
 sparse_strategy=Static
-test_task=wiki
+test_task=mmlu
 test_all=0
-dataset=mix_wikitext_alpaca_c4_12.json
+dataset=mix_alpaca_c4_9000.json
