fix flexable limit of test , fix mi300x

--- a/tools/params_temp.env
+++ b/tools/params_temp.env
@@ -1,9 +1,10 @@
-job_name=Meta-Llama-3-8B-sparse_0.7-cr_0_q4-distill
+job_name=Meta-Llama-3-8B-sparse_0.6-cr_0_q4-distill
 tasks_array=train
 model_name=Meta-Llama-3-8B
-sparse=0.7
+sparse=0.6
 do_cr=0
 sparse_strategy=Static
-test_task=mmlu
+test_task=wikitext,gsm8k
 test_all=0
 dataset=mix_alpaca_c4_9000.json
+limit=300
