--- a/tools/params/test_scale.env
+++ b/tools/params/test_scale.env
@@ -1,12 +1,11 @@
 job_name=local_test
-tasks_array=test
-model_name=Meta-Llama-3-8B
-sparse=0.6
+tasks_array=test,generate_threshold,generate_teacher_data,train,chat
+model_name=Qwen2.5-0.5B-Instruct
+sparse=0.5
 do_cr=0
 sparse_strategy=Static
-test_task=wikitext,gsm8k
+test_task=wikitext
 test_all=0
 dataset=mix_wikitext_alpaca_c4_12.json
 MODEL_PATH=/data/wzw/models/Meta-Llama-3-8B-0.6/ckpts/Meta-Llama-3-8B/int4-g64/
-
 limit=10
