--- a/tools/params/local_easy_test.env
+++ b/tools/params/local_easy_test.env
@@ -4,7 +4,7 @@ model_name=Qwen2.5-0.5B-Instruct
 sparse=0.5
 do_cr=0
 sparse_strategy=Static
-test_task=wiki
+test_task=wikitext
 test_all=0
 dataset=mix_wikitext_alpaca_c4_12.json
 limit=10
