fix amlt code execute train.sh

--- a/tools/params/local_easy_test.env
+++ b/tools/params/local_easy_test.env
@@ -1,5 +1,5 @@
 job_name=local_test
-tasks_array=test,generate_threshold,generate_teacher_data,train,chat
+tasks_array=test,generate_threshold,generate_teacher_data,train,chat,test_all
 model_name=Qwen2.5-0.5B-Instruct
 sparse=0.5
 do_cr=0
