--- a/tools/params_temp.env
+++ b/tools/params_temp.env
@@ -1,12 +1,10 @@
-job_name=local_test
-tasks_array=test
+job_name=Meta-Llama-3-8B-sparse_0.5-cr_0_q4-sd-A100-Lr_1e-6
+tasks_array=train
 model_name=Meta-Llama-3-8B
-sparse=0.6
+sparse=0.5
 do_cr=0
 sparse_strategy=Static
-test_task=wikitext,gsm8k
+test_task=mmlu,wikitext,gsm8k,agieval,arc_easy,arc_challenge,piqa
 test_all=0
-dataset=mix_wikitext_alpaca_c4_12.json
-MODEL_PATH=/data/wzw/models/Meta-Llama-3-8B-0.6/ckpts/Meta-Llama-3-8B/int4-g64/
-
-limit=10
+dataset=mix_alpaca_c4_9000.json
+limit=1000
