--- a/tools/params_temp.env
+++ b/tools/params_temp.env
@@ -1,5 +1,5 @@
-job_name=Meta-Llama-3-8B-sparse_0.5-cr_0_q4-sd-A100-Lr_1e-6
-tasks_array=train
+job_name=gcrbitdistiller-Meta-Llama-3-8B-sparse_0.5-cr_0_q4_distillation-a100
+tasks_array=test_all
 model_name=Meta-Llama-3-8B
 sparse=0.5
 do_cr=0
@@ -7,4 +7,4 @@ sparse_strategy=Static
 test_task=mmlu,wikitext,gsm8k,agieval,arc_easy,arc_challenge,piqa
 test_all=0
 dataset=mix_alpaca_c4_9000.json
-limit=1000
+limit=-1
