--- a/tools/params_temp.env
+++ b/tools/params_temp.env
@@ -4,8 +4,8 @@ model_name=Meta-Llama-3-8B
 sparse=0.5
 do_cr=0
 sparse_strategy=Static
-test_task=wikitext,gsm8k
+test_task=wikitext
 test_all=0
 dataset=mix_alpaca_c4_9000.json
 limit=100
-MODEL_PATH=/data/wzw/models/Meta-Llama-3-8B-0.5-ste/ckpts/Meta-Llama-3-8B/int4-g64/
+MODEL_PATH=/data/wzw/models/Meta-Llama-3-8B-0.5-distill/ckpts/Meta-Llama-3-8B/int4-g64/
