--- a/tools/params_temp.env
+++ b/tools/params_temp.env
@@ -1,10 +1,13 @@
-job_name=gcrbitdistiller-Llama-2-7b-chat-hf-sparse_0.5-cr_0_Testall
-tasks_array=test
-model_name=Llama-2-7b-chat-hf
+job_name=gcrbitdistiller-Meta-Llama-3-8B-sparse_0.5-cr_0_lora_all_blocks
+tasks_array=train
+model_name=Meta-Llama-3-8B
 sparse=0.5
 do_cr=0
 sparse_strategy=Static
-test_task=mmlu,wikitext,gsm8k,agieval,arc_easy,arc_challenge,piqa
+test_task=mmlu,wikitext
 test_all=0
 dataset=mix_alpaca_c4_9000.json
 limit=-1
+MODEL_PATH=
+QUANT=0
+USE_LORA=
