--- a/tools/params_temp.env
+++ b/tools/params_temp.env
@@ -1,13 +1,13 @@
-job_name=gcrbitdistiller-Meta-Llama-3-8B-sparse_0.5-cr_0_lora_all_blocks
+job_name=gcrbitdistiller-Meta-Llama-3-8B-sparse_0.7-cr_0_static_all_blocks_c4_finetune_no_ste
 tasks_array=train
 model_name=Meta-Llama-3-8B
-sparse=0.5
+sparse=0.7
 do_cr=0
 sparse_strategy=Static
-test_task=mmlu,wikitext
-test_all=0
-dataset=mix_alpaca_c4_9000.json
+test_task=wikitext
+test_all=1
+dataset=c4_processed.json
 limit=-1
 MODEL_PATH=
 QUANT=0
-USE_LORA=
+USE_LORA=0
