--- a/tools/params/local_easy_test.env
+++ b/tools/params/local_easy_test.env
@@ -1,14 +1,14 @@
 job_name=local_test
-tasks_array=test,generate_threshold,generate_teacher_data,train,chat,test_all
+tasks_array=test
 model_name=Qwen2.5-0.5B-Instruct
 sparse=0.5
 do_cr=0
 sparse_strategy=Static
 test_task=wikitext
-test_all=0
+test_all=1
 dataset=mix_wikitext_alpaca_c4_12.json
-limit=10
-QUANT=1
+limit=-1
+QUANT=0
 MODEL_PATH=
 USE_LORA=0
 LORA_CHECKPOINT=
