--- a/tools/params_temp.env
+++ b/tools/params_temp.env
@@ -1,11 +1,11 @@
-job_name=gcrbitdistiller-Meta-Llama-3-8B-sparse_0.7-cr_0_static_all_blocks_c4_finetune_no_ste
-tasks_array=train
+job_name=gcrbitdistiller-Meta-Llama-3-8B-sparse_0.8-cr_0_dynamic_all_blocks_c4_distill
+tasks_array=test
 model_name=Meta-Llama-3-8B
-sparse=0.7
+sparse=0.8
 do_cr=0
-sparse_strategy=Static
-test_task=wikitext
-test_all=1
+sparse_strategy=Dynamic
+test_task=mmlu
+test_all=0
 dataset=c4_processed.json
 limit=-1
 MODEL_PATH=
