--- a/train/config/ds_config.json
+++ b/train/config/ds_config.json
@@ -23,8 +23,13 @@
       }
     },
     "scheduler": {
-      "type": "constant",   
-      "params": {}
+      "type": "CosineAnnealingWarmRestarts",
+      "params": {
+        "T_0": 1000,
+        "T_mult": 1,
+        "eta_min": 0.0,
+        "last_epoch": -1
+      }
     },
     "gradient_checkpointing": true  
   }
